--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -58,23 +58,22 @@
     .nav img{
         margin-top: 2vw;
     }
+.nav-links {
+    display: flex;
+    flex-direction: column;
+    position: fixed; /* Change from absolute to fixed */
+    width: 50%;
+    top: 0;
+    height: 100vh;
+    background: black;
+    opacity: 0.7;
+    right: -50%; /* Adjust this value to set the initial position off-screen */
+    padding: 120px 20px;
+    gap: 13vw;
+    transition: opacity 0.3s ease, right 0.3s ease;
+    overflow-y: auto; /* Add this line to enable vertical scrolling if needed */
+}
 
-    .nav-links {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        width: 50%;
-        top: 0;
-        height: 100vh;
-        background: black;
-        opacity: 0.7;
-        right: 0;
-        bottom: 0;
-        padding: 120px 20px;
-        gap: 13vw;
-        transform: translateX(0%);
-        transition: opacity 0.3s ease, transform 0.3s ease;
-    }
 
     .active {
         transform: translateX(100%);
@@ -95,7 +94,7 @@
     .nav-links {
         display: flex;
         flex-direction: column;
-        position: absolute;
+        position: fixed;
         width: 50%;
         top: 0;
         height: 100vh;
